--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,5 +1,46 @@
-main > .container {
+:root,
+::backdrop {
+    --header-font-color: #0d0c22;
+    --border-color: #0d0c22;
+    --bg: #fff;
+
+}
+
+@media (prefers-color-scheme: dark) {
+
+    :root,
+    ::backdrop {
+        --header-font-color: #fff;
+        --border-color: #fff;
+        --bg: #0d0c22;
+
+    }
+
+}
+
+main>.container {
     padding: 70px 15px 20px;
+}
+
+.header {
+    background: var(--bg);
+}
+
+.logo span {
+    color: var(--header-font-color);
+    font-weight: 700;
+    padding-left: 60px;
+
+}
+
+.nav.nav-pills {
+    padding-right: 60px;
+    gap: 10px;
+}
+
+.header-menu-link.nav-link  {
+    border: 0.2px solid var(--border-color);
+    color: var(--header-font-color);
 }
 
 .footer {
@@ -8,7 +49,7 @@ main > .container {
     height: 60px;
 }
 
-.footer > .container {
+.footer>.container {
     padding-right: 15px;
     padding-left: 15px;
 }
@@ -19,26 +60,6 @@ main > .container {
 }
 
 /* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    content: '';
-    left: 3px;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border: solid 5px transparent;
-    margin: 4px 4px 2px 4px;
-    background: transparent;
-}
-
-a.asc:after {
-    border-bottom: solid 7px #212529;
-    border-top-width: 0;
-}
-
-a.desc:after {
-    border-top: solid 7px #212529;
-    border-bottom-width: 0;
-}
 
 .grid-view th {
     white-space: nowrap;
@@ -59,27 +80,27 @@ a.desc:after {
 }
 
 /* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
+.nav li>form>button.logout {
     padding-top: 7px;
     color: rgba(255, 255, 255, 0.5);
 }
 
 @media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
+    .nav li>form>button.logout {
+        display: block;
         text-align: left;
         width: 100%;
         padding: 10px 0;
     }
 }
 
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
+.nav>li>form>button.logout:focus,
+.nav>li>form>button.logout:hover {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.75);
 }
 
-.nav > li > form > button.logout:focus {
+.nav>li>form>button.logout:focus {
     outline: none;
 }
 
