modified:   config/console.php 	modified:   config/web.php 	new file:   console/controllers/RbacController.php.example 	modified:   controllers/TaskManagerController.php 	new file:   migrations/m240905_051559_init_rbac.php 	new file:   migrations/m240905_065934_update_rbac_permissions.php 	new file:   models/CreatePostForm.php 	new file:   models/Post.php 	modified:   models/SignUpForm.php 	modified:   models/User.php 	modified:   views/layouts/main.php 	new file:   views/task-manager/create-post.php 	modified:   views/task-manager/home.php 	modified:   views/task-manager/sign-in.php 	modified:   views/task-manager/sign-up.php 	modified:   web/css/site.css

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -38,9 +38,15 @@ main>.container {
     gap: 10px;
 }
 
-.header-menu-link.nav-link  {
-    border: 0.2px solid var(--border-color);
+.header-menu-link.nav-link {
+    /* border: 0.2px solid var(--border-color); */
     color: var(--header-font-color);
+    text-decoration:underline;
+}
+
+.bi{
+    width: 20px;
+    height: 20px;
 }
 
 .footer {
