--- a/web/css/site.css
+++ b/web/css/site.css
@@ -96,7 +96,9 @@ main>.container {
     gap: 50px;
     margin: 20px;
 }
-.img ,img{
+
+.img,
+img {
     width: 300px;
     height: 300px;
     display: flex;
@@ -105,6 +107,16 @@ main>.container {
     background: var(--bg);
     color: var(--border-color);
 }
+
+.status {
+    display: flex;
+    align-items: center;
+    height: 20px;
+    /* justify-content: center; */
+    width: 100%;
+    gap: 20px;
+}
+
 @media(max-width:767px) {
     .nav li>form>button.logout {
         display: block;
