modified:   controllers/TaskManagerController.php 	new file:   migrations/m241003_060102_create_post_to_users_table.php 	new file:   models/PostToUsers.php 	modified:   views/task-manager/home.php 	modified:   web/css/site.css 	new file:   web/uploadImage/36/publication/66fe27c3b34d3.png 	new file:   web/uploadImage/36/publication/66fe36807c5ed.png 	new file:   web/uploadImage/36/publication/66fe375f3575f.png 	new file:   web/uploadImage/36/publication/66fe377edde9b.png 	new file:   web/uploadImage/36/publication/66fe37cfbf3a0.png 	new file:   web/uploadImage/36/publication/66fe380455097.png 	new file:   web/uploadImage/36/publication/66fe38421a209.png 	new file:   web/uploadImage/36/publication/66fe386138e35.png 	new file:   web/uploadImage/36/publication/66fe386e27f52.png 	new file:   web/uploadImage/36/publication/66fe388d05441.png 	new file:   web/uploadImage/36/publication/66fe38c4419fa.png 	new file:   web/uploadImage/36/publication/66fe3ab68f4c3.png 	new file:   web/uploadImage/36/publication/66fe41c466618.jpg

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -97,8 +97,18 @@ main>.container {
     margin: 20px;
 }
 
-.img,
+.img_have,
 img {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    color: var(--border-color);
+}
+
+.img_empty{
     width: 300px;
     height: 300px;
     display: flex;
@@ -114,7 +124,30 @@ img {
     height: 20px;
     /* justify-content: center; */
     width: 100%;
+    gap: 10px;
+    font-size: 10px;
+    margin: 0;
+}
+
+.disabled-link {
+    pointer-events: none;
+    color: gray;
+    text-decoration: none;
+}
+
+.flex-button {
+    display: flex;
     gap: 20px;
+    padding: 20px 0;
+}
+
+.active-link {
+    border: 0.2px solid;
+    border-color: #0d0c22;
+    color: #0d0c22;
+    border-radius: 10px;
+    padding: 0px 10px 5px;
+    text-decoration: none;
 }
 
 @media(max-width:767px) {
