--- a/web/css/site.css
+++ b/web/css/site.css
@@ -20,6 +20,7 @@
 
 main>.container {
     padding: 70px 15px 20px;
+    width: 50%;
 }
 
 .header {
@@ -99,8 +100,8 @@ main>.container {
 
 .img_have,
 img {
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,9 +109,9 @@ img {
     color: var(--border-color);
 }
 
-.img_empty{
-    width: 300px;
-    height: 300px;
+.img_empty {
+    width: 100px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,17 +119,32 @@ img {
     color: var(--border-color);
 }
 
-.status {
+.flex-status {
     display: flex;
     align-items: center;
     height: 20px;
     /* justify-content: center; */
     width: 100%;
-    gap: 10px;
-    font-size: 10px;
+    gap: 5px;
     margin: 0;
 }
 
+.flex-status p {
+    margin: 0 0 4px 0 ;
+    line-height: 1;
+    font-size: 10px;
+}
+
+.flex-status svg {
+    display: inline-block; /* Ensure the SVG behaves like an inline element */
+    vertical-align: middle;/* Align the SVG with the middle of the text */
+}
+.text{
+    width: 50%;
+}
+.text h5{
+    font-size: 14px;
+}
 .disabled-link {
     pointer-events: none;
     color: gray;
