--- a/web/css/site.css
+++ b/web/css/site.css
@@ -6,6 +6,7 @@
 
 }
 
+
 @media (prefers-color-scheme: dark) {
 
     :root,
@@ -18,15 +19,27 @@
 
 }
 
+.d-flex.flex-column.h-100 {
+    /* background: linear-gradient(149deg, #000 0%, #07022b 39.5%); */
+    background: linear-gradient(135deg, #d9d9d9 0%, #aaa 38.91%, #737373 84.5%);
+}
+
 main>.container {
     padding: 70px 15px 20px;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header {
     background: var(--bg);
 }
-
+.flex-container{
+    padding: 70px 15px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .logo span {
     color: var(--header-font-color);
     font-weight: 700;
@@ -94,8 +107,14 @@ main>.container {
 
 .flex {
     display: flex;
-    gap: 50px;
+    gap: 5%;
     margin: 20px;
+    background: white;
+    padding: 12px;
+    border-radius: 20px;
+    width: 100%;
+    box-shadow: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #d9d9d9;
 }
 
 .img_have,
@@ -107,6 +126,7 @@ img {
     align-items: center;
     background: white;
     color: var(--border-color);
+    border-radius: 20px;
 }
 
 .img_empty {
@@ -130,21 +150,27 @@ img {
 }
 
 .flex-status p {
-    margin: 0 0 4px 0 ;
+    margin: 0 0 4px 0;
     line-height: 1;
     font-size: 10px;
 }
 
 .flex-status svg {
-    display: inline-block; /* Ensure the SVG behaves like an inline element */
-    vertical-align: middle;/* Align the SVG with the middle of the text */
+    display: inline-block;
+    /* Ensure the SVG behaves like an inline element */
+    vertical-align: middle;
+    /* Align the SVG with the middle of the text */
 }
-.text{
+
+.text {
     width: 50%;
 }
-.text h5{
+
+.text a {
     font-size: 14px;
+    color: black;
 }
+
 .disabled-link {
     pointer-events: none;
     color: gray;
