--- a/web/css/site.css
+++ b/web/css/site.css
@@ -21,7 +21,9 @@
 
 .d-flex.flex-column.h-100 {
     /* background: linear-gradient(149deg, #000 0%, #07022b 39.5%); */
-    background: linear-gradient(135deg, #d9d9d9 0%, #aaa 38.91%, #737373 84.5%);
+    background: #0d0c22;
+    background-size: 100 100;
+    background-repeat: no-repeat;
 }
 
 main>.container {
@@ -39,6 +41,7 @@ main>.container {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 70%;
 }
 .logo span {
     color: var(--header-font-color);
@@ -109,12 +112,13 @@ main>.container {
     display: flex;
     gap: 5%;
     margin: 20px;
-    background: white;
+    background: transparent;
     padding: 12px;
     border-radius: 20px;
-    width: 100%;
+    width: 50%;
     box-shadow: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     background: #d9d9d9;
+
 }
 
 .img_have,
@@ -124,7 +128,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: white;
+    background: transparent;
     color: var(--border-color);
     border-radius: 20px;
 }
@@ -147,6 +151,8 @@ img {
     width: 100%;
     gap: 5px;
     margin: 0;
+    position: absolute;
+    bottom: 0;
 }
 
 .flex-status p {
@@ -164,9 +170,10 @@ img {
 
 .text {
     width: 50%;
+    position: relative;
 }
 
-.text a {
+.text-link{
     font-size: 14px;
     color: black;
 }
