--- a/web/css/site.css
+++ b/web/css/site.css
@@ -244,23 +244,35 @@ main>.container {
     border-radius: 10px;
     /* Закругление углов, если нужно */
 }
-.text-more-information-post{
+
+.text-more-information-post {
     padding: 20px;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
     width: 100%;
 }
-.post-text-more-information{
 
+.post-text-more-information {
+    font-size: 12px;
 }
-.button-status-type-submit{
+
+.button-status-type-submit {
     display: flex;
     gap: 10px;
 }
-.button-status-type-submit button{
+
+.button-status-type-submit button {
     width: 100px;
     border-radius: 10px;
     background-color: transparent;
     border: 2px solid #0d0c22;
+}
+
+.dialog {
+    width: 40%;
+    box-shadow: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #fffbfb;
+    height: 300px;
+    border-radius: 10px;
 }
