--- a/web/css/site.css
+++ b/web/css/site.css
@@ -365,7 +365,7 @@ main>.container {
     border-radius: 10px;
     padding: 10px;
     width: auto;
-  
+
 }
 
 .text-headers-comment {
@@ -433,3 +433,32 @@ main>.container {
     flex-direction: column;
     align-items: center;
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    /* min-width: 100px; */
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+   padding: 5px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.headers-comment {
+    display: flex;
+    justify-content: space-between; /* Разделить элементы на противоположные стороны */
+    align-items: center; /* Вертикальное выравнивание */
+}
+
+.dropdown-content {
+    display: none; /* По умолчанию скрытое меню */
+    position: absolute;
+    right: 0; /* Выравнивание дропдауна к правой стороне */
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
