--- a/web/css/site.css
+++ b/web/css/site.css
@@ -433,6 +433,7 @@ main>.container {
     flex-direction: column;
     align-items: center;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -440,25 +441,58 @@ main>.container {
     /* min-width: 100px; */
     text-align: center;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-   padding: 5px;
+    padding: 5px;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
 .headers-comment {
     display: flex;
-    justify-content: space-between; /* Разделить элементы на противоположные стороны */
-    align-items: center; /* Вертикальное выравнивание */
+    justify-content: space-between;
+    /* Разделить элементы на противоположные стороны */
+    align-items: center;
+    /* Вертикальное выравнивание */
 }
 
 .dropdown-content {
-    display: none; /* По умолчанию скрытое меню */
+    display: none;
+    /* По умолчанию скрытое меню */
     position: absolute;
-    right: 0; /* Выравнивание дропдауна к правой стороне */
+    right: 0;
+    /* Выравнивание дропдауна к правой стороне */
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
+#clock {
+    font-family: "Times New Roman", Times, serif;
+    font-size: 25px;
+    letter-spacing: 2.2px;
+    word-spacing: 2px;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    background: rgb(13, 12, 34);
+    width: 135px;
+    text-align: center;
+    border-radius: 10px;
+    float: left;
+    position: fixed;
+    right: 50px;
+}
+
+.subtext-link{
+    overflow: hidden;
+    white-space: nowrap;
+}
+.subtext-text{
+    overflow: hidden;
+    white-space: nowrap; 
+}
